+ build.xml so angepasst, dass in des ZIP-File das JRE für ein eingestelltes Betriebssystem inkludiert wird